--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -12,6 +12,17 @@
   <session-config>
     <session-timeout>30</session-timeout>
   </session-config>
+  
+  <servlet>
+    <servlet-name>dispatcher-servlet</servlet-name>
+    <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>dispatcher-servlet</servlet-name>
+    <url-pattern>/</url-pattern>
+  </servlet-mapping>
+  
+  
   <servlet>
     <servlet-name>registrarCamarada</servlet-name>
     <servlet-class>mvc.controllers.servlets.ServletRegistroCamarada</servlet-class>
